force-app/main/default/objects/Bill_Group__c/Bill_Group__c.object-meta.xml
<CustomObject>
    <description>Bill Groups are groups of billing (a group of facilities that belong to a single customer)</description>
    <label>Bill Group</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Bill Group ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>