force-app/main/default/objects/Bill_Group__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which Account (Customer) owns this bill group?</description>
    <inlineHelpText>Which Account (Customer) owns this bill group?</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bill Groups</relationshipLabel>
    <relationshipName>Bill_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>