force-app/main/default/objects/Bill_Group__c/fields/Assignment_From_Bill_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_From_Bill_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment From Bill Group</label>
    <referenceTo>Bill_Group__c</referenceTo>
    <relationshipLabel>Bill Groups</relationshipLabel>
    <relationshipName>Bill_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>