force-app/main/default/objects/Bill_Group__c/fields/Auto_Pay__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Pay</label>
    <type>Checkbox</type>
</CustomField>