force-app/main/default/objects/Bill_Group__c/fields/BG_ID__c.field-meta.xml
<CustomField>
    <fullName>BG_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>BG ID</label>
    <type>Text</type>
</CustomField>