force-app/main/default/objects/Bill_Group__c/fields/Bill_Group_Batch__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group_Batch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>this is the &quot;Safari Billing Cycle&quot; and is dependent upon the CES Office field to be populated</inlineHelpText>
    <label>Bill Group Batch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bill_Group_Batch__c.CES_Office__c</field>
            <operation>equals</operation>
            <valueField>$Source.CES_Office__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bill_Group_Batch__c</referenceTo>
    <relationshipLabel>Bill Groups</relationshipLabel>
    <relationshipName>Bill_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>