force-app/main/default/objects/Bill_Group__c/fields/Bill_Group_Name_Character_Count__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group_Name_Character_Count__c</fullName>
    <formula>Len(Trim(Billing_Group_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Group Name Character Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>