force-app/main/default/objects/Bill_Group__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>Billing Street Address for Invoice related mailing</description>
    <inlineHelpText>Billing Street Address for Invoice related mailing</inlineHelpText>
    <label>Billing Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>