force-app/main/default/objects/Bill_Group__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>Billing City for Invoice related mailing</description>
    <inlineHelpText>Billing City for Invoice related mailing</inlineHelpText>
    <label>Billing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>