force-app/main/default/objects/Bill_Group__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Contact (entered under the account in Salesforce) is contacted for the billing</description>
    <inlineHelpText>Which Contact (entered under the account in Salesforce) is contacted for the billing</inlineHelpText>
    <label>Billing Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Filtered for Account Contacts. Remove filter to search for Account Contact Roles</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bill Groups</relationshipLabel>
    <relationshipName>Bill_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>