force-app/main/default/objects/Bill_Group__c/fields/Billing_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Group_Name__c</fullName>
    <label>Billing Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>