force-app/main/default/objects/Bill_Group__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <description>Billing State code for Invoice related mailing</description>
    <inlineHelpText>Billing State code for Invoice related mailing</inlineHelpText>
    <label>Billing State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>