force-app/main/default/objects/Bill_Group__c/fields/Billing_Term__c.field-meta.xml
<CustomField>
    <fullName>Billing_Term__c</fullName>
    <label>Billing Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 10</fullName>
            </value>
            <value>
                <fullName>Net 14</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 20</fullName>
            </value>
            <value>
                <fullName>Net 25</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 35</fullName>
            </value>
            <value>
                <fullName>Net 40</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
            <value>
                <fullName>Net 150</fullName>
            </value>
            <value>
                <fullName>Net 160</fullName>
            </value>
            <value>
                <fullName>25th of the month</fullName>
            </value>
            <value>
                <fullName>Other (see notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>