force-app/main/default/objects/Bill_Group__c/fields/Billing_Term_Safari_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Term_Safari_ID__c</fullName>
    <formula>CASE( TEXT(Billing_Term__c), 
   &#39;Net 10&#39;, 1, 
   &#39;Net 15&#39;, 2,
   &#39;Net 20&#39;, 3,
   &#39;Net 25&#39;, 4,
   &#39;Net 30&#39;, 5,
   &#39;Net 45&#39;, 6,
   &#39;Net 60&#39;, 7,
   &#39;Net 120&#39;, 8,
   1)</formula>
    <label>Billing Term Safari ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>