force-app/main/default/objects/Bill_Group__c/fields/Billing_Term_Safari_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Term_Safari_Name__c</fullName>
    <formula>TEXT(Billing_Term__c) &amp; &#39; Days&#39;</formula>
    <label>Billing Term Safari Name</label>
    <type>Text</type>
</CustomField>