force-app/main/default/objects/Bill_Group__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
                <default>true</default>
                <label>Actual</label>
            </value>
            <value>
                <fullName>Estimated w/ true up</fullName>
            </value>
            <value>
                <fullName>Estimated w/o true up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>