force-app/main/default/objects/Bill_Group__c/fields/Billing_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type_ID__c</fullName>
    <formula>IF(ISPICKVAL(Billing_Type__c, &#39;Estimated w/ true up&#39;)
  , 1
  , IF(ISPICKVAL(Billing_Type__c, &#39;Estimated w/o true up&#39;)
      , 2
      , 0
    )
)</formula>
    <label>Billing Type ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>