force-app/main/default/objects/Bill_Group__c/fields/Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code__c</fullName>
    <description>Billing Zip Code for Invoice related mailing</description>
    <inlineHelpText>Billing Zip Code for Invoice related mailing</inlineHelpText>
    <label>Billing Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>