force-app/main/default/objects/Bill_Group__c/fields/Charge_Interest__c.field-meta.xml
<CustomField>
    <fullName>Charge_Interest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Charge Interest</label>
    <type>Checkbox</type>
</CustomField>