force-app/main/default/objects/Bill_Group__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <label>Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>