force-app/main/default/objects/Bill_Group__c/fields/Customer_ID_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_and_Name__c</fullName>
    <formula>Customer_ID__c &amp; &quot; : &quot; &amp;  Billing_Group_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ID and Name</label>
    <type>Text</type>
</CustomField>