force-app/main/default/objects/Bill_Group__c/fields/Customer_Number_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number_and_Name__c</fullName>
    <formula>Customer_Number__c &amp; &quot;: &quot; &amp; Billing_Group_Name__c</formula>
    <label>Customer Number and Name</label>
    <type>Text</type>
</CustomField>