force-app/main/default/objects/Bill_Group__c/fields/Do_Not_Sync_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_Last_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is set to true in before trigger if External Update is true</description>
    <inlineHelpText>this is set to true in before trigger if External Update is true</inlineHelpText>
    <label>Do Not Sync Last Update</label>
    <type>Checkbox</type>
</CustomField>