force-app/main/default/objects/Bill_Group__c/fields/Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Email_Formula__c</fullName>
    <formula>if(isblank(Billing_Contact__c), Email__c, Billing_Contact__r.Email)</formula>
    <label>Email Formula</label>
    <type>Text</type>
</CustomField>