force-app/main/default/objects/Bill_Group__c/fields/Even_Pay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Even_Pay_Amount__c</fullName>
    <label>Even Pay Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>