force-app/main/default/objects/Bill_Group__c/fields/External_Contact_Update__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The contact associated with this record had a change which triggers this field to set the process contact change to true</description>
    <inlineHelpText>The contact associated with this record had a change which triggers this field to set the process contact change to true</inlineHelpText>
    <label>External Contact Update</label>
    <type>Checkbox</type>
</CustomField>