force-app/main/default/objects/Bill_Group__c/fields/Fax_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fax_Formula__c</fullName>
    <formula>if(isblank(Billing_Contact__c), Fax__c, Billing_Contact__r.Fax)</formula>
    <label>Fax Formula</label>
    <type>Text</type>
</CustomField>