force-app/main/default/objects/Bill_Group__c/fields/First_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Formula__c</fullName>
    <formula>if(isblank(Billing_Contact__c), First_Name__c, Billing_Contact__r.FirstName)</formula>
    <label>First Name Formula</label>
    <type>Text</type>
</CustomField>