force-app/main/default/objects/Bill_Group__c/fields/Fixed_Billing_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Billing_Day_of_Month__c</fullName>
    <inlineHelpText>is bill group billed on or before a fixed day of the month?</inlineHelpText>
    <label>Fixed Billing Day of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>