force-app/main/default/objects/Bill_Group__c/fields/GEM_ID__c.field-meta.xml
<CustomField>
    <fullName>GEM_ID__c</fullName>
    <description>External ID from CRES GEM System.</description>
    <inlineHelpText>External ID from CRES GEM System.</inlineHelpText>
    <label>GEM ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>