force-app/main/default/objects/Bill_Group__c/fields/Interest_Override_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Override_Rate__c</fullName>
    <label>Interest Override Rate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>