force-app/main/default/objects/Bill_Group__c/fields/Invoice_Message__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Message__c</fullName>
    <label>Invoice Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>