force-app/main/default/objects/Bill_Group__c/fields/Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template__c</fullName>
    <label>Invoice Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CR Single Invoice</fullName>
            </value>
            <value>
                <fullName>CR Summary Invoice</fullName>
            </value>
            <value>
                <fullName>SMIT Daily Contract Details</fullName>
            </value>
            <value>
                <fullName>SMIT Daily Contract Tax Details</fullName>
            </value>
            <value>
                <fullName>SMIT FOM Baseload Tax Details</fullName>
            </value>
            <value>
                <fullName>SMIT Only</fullName>
            </value>
            <value>
                <fullName>SMIT and Savings Only B</fullName>
            </value>
            <value>
                <fullName>CEIP Transport Single</fullName>
            </value>
            <value>
                <fullName>CEIP Wholesale Single</fullName>
            </value>
            <value>
                <fullName>CEIP CR Single Invoice</fullName>
            </value>
            <value>
                <fullName>CEIP Transport Summary</fullName>
            </value>
            <value>
                <fullName>CEIP Wholesale Summary</fullName>
            </value>
            <value>
                <fullName>CEIP CR Summary Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>