force-app/main/default/objects/Bill_Group__c/fields/Last_Modified_by_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_by_Sync__c</fullName>
    <label>Last Modified by Sync</label>
    <type>DateTime</type>
</CustomField>