force-app/main/default/objects/Bill_Group__c/fields/Last_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Formula__c</fullName>
    <formula>if(isblank(Billing_Contact__c), Last_Name__c, Billing_Contact__r.LastName)</formula>
    <label>Last Name Formula</label>
    <type>Text</type>
</CustomField>