force-app/main/default/objects/Bill_Group__c/fields/Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>Phone_Formula__c</fullName>
    <formula>if(isblank(Billing_Contact__c), Phone__c, Billing_Contact__r.Phone)</formula>
    <label>Phone Formula</label>
    <type>Text</type>
</CustomField>