force-app/main/default/objects/Bill_Group__c/fields/Previous_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Customer_Number__c</fullName>
    <description>if acquired business, what was the previous customer number?</description>
    <externalId>true</externalId>
    <inlineHelpText>if acquired business, what was the previous customer number?</inlineHelpText>
    <label>Previous Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>