force-app/main/default/objects/Bill_Group__c/fields/Process_Contact_Change__c.field-meta.xml
<CustomField>
    <fullName>Process_Contact_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set to true by an update on the related contact so to trigger a change.</description>
    <inlineHelpText>set to true by an update on the related contact so to trigger a change.</inlineHelpText>
    <label>Process Contact Change</label>
    <type>Checkbox</type>
</CustomField>