force-app/main/default/objects/Bill_Group__c/fields/Safari_ID__c.field-meta.xml
<CustomField>
    <fullName>Safari_ID__c</fullName>
    <description>External ID for the bill group (Safari)</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID for the bill group (Safari)</inlineHelpText>
    <label>Safari ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>