force-app/main/default/objects/Bill_Group__c/fields/Safari_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Safari_ID_Formula__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, Safari_ID__c ) = 0
  , NULL
  ,  MID( Safari_ID__c , FIND(&#39;-&#39;, Safari_ID__c ) + 1, LEN( Safari_ID__c ) - FIND(&#39;-&#39;, Safari_ID__c ) + 1) 
)</formula>
    <label>Safari ID Formula</label>
    <type>Text</type>
</CustomField>