force-app/main/default/objects/Bill_Group__c/fields/Sync_Batch__c.field-meta.xml
<CustomField>
    <fullName>Sync_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Batch</label>
    <referenceTo>Sync_Batch__c</referenceTo>
    <relationshipLabel>Bill Groups</relationshipLabel>
    <relationshipName>Bill_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>