force-app/main/default/objects/Bill_Group__c/fields/UF_Name_Consolidated_Billing__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Consolidated_Billing__c</fullName>
    <formula>&#39;Consolidated Billing&#39;</formula>
    <label>UF Name - Consolidated Billing</label>
    <type>Text</type>
</CustomField>