force-app/main/default/objects/Bill_Group__c/fields/UF_Value_AutoPay__c.field-meta.xml
<CustomField>
    <fullName>UF_Value_AutoPay__c</fullName>
    <formula>IF( Auto_Pay__c == true, &#39;Yes&#39;, &#39;No&#39;)</formula>
    <label>UF Value - AutoPay</label>
    <type>Text</type>
</CustomField>