force-app/main/default/objects/Bill_Group__c/fields/UF_Value_Consolidated_Billing__c.field-meta.xml
<CustomField>
    <fullName>UF_Value_Consolidated_Billing__c</fullName>
    <formula>IF(Bill_Group_Batch__r.Consolidated_Billing__c == true, &#39;Yes&#39;, &#39;No&#39;)</formula>
    <label>UF Value - Consolidated Billing</label>
    <type>Text</type>
</CustomField>