force-app/main/default/objects/Bill_Group__c/validationRules/Billing_Contact_Existence_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contact_Existence_Rule</fullName>
    <active>false</active>
    <description>either Billing Contact is populated or billing contact fields are populated, but not both.</description>
    <errorConditionFormula>OR(
AND(
  NOT(ISBLANK(Billing_Contact__c)),
  OR(
    NOT(ISBLANK(First_Name__c)),
    NOT(ISBLANK(Last_Name__c)),
    NOT(ISBLANK(Phone__c)),
    NOT(ISBLANK(Fax__c)),
    NOT(ISBLANK(Email__c))
  )
),
AND(
  ISBLANK(Billing_Contact__c),
  ISBLANK(Last_Name__c)
)
)</errorConditionFormula>
    <errorMessage>BillGroup02: Either Billing Contact must be selected OR Contact Fields need to be populated.</errorMessage>
</ValidationRule>