force-app/main/default/objects/Bill_Group__c/listViews/Houston_Bill_Groups.listView-meta.xml
<ListView>
    <fullName>Houston_Bill_Groups</fullName>
    <columns>NAME</columns>
    <columns>Customer_Number__c</columns>
    <columns>Billing_Group_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Bill_Group_Batch__c</columns>
    <columns>Invoice_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CES_Office__c</field>
        <operation>equals</operation>
        <value>CES-Houston</value>
    </filters>
    <label>Houston Bill Groups</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>